<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen3">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/photo_image_view1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/bg_2_2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/photo_image_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/object_2"
                android:scaleType="centerInside"
                android:layout_gravity="center"/>

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp" />

        <LinearLayout
            android:id="@+id/mobile_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_secndry"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/mobile_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_mobile"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/mobile_textview"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:text="@string/mobile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fb_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_secndry"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/fb_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_fb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/fb_textview"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:text="@string/fb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_secndry"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_google"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/google_textview"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:text="@string/google" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail_button"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_secndry"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/mail_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/icon_mail"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/mail_textview"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:text="Continue with Email" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_textview"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>